Implement interface for service. Closes #2